// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchResults when closed should render self 1`] = `
<div
  className="searchResults"
>
  <BlankState
    className="blankState"
    message="No videos found."
  />
</div>
`;

exports[`SearchResults when opened should render self with error message 1`] = `
<div
  className="searchResultsIsOpen"
>
  <ErrorState
    className="errorState"
    message="Error requesting videos."
  />
</div>
`;

exports[`SearchResults when opened should render self with loader 1`] = `
<div
  className="searchResultsIsOpen"
>
  <Loader
    className="loader"
  />
</div>
`;

exports[`SearchResults when opened should render self with no results 1`] = `
<div
  className="searchResultsIsOpen"
>
  <BlankState
    className="blankState"
    message="No videos found."
  />
</div>
`;

exports[`SearchResults when opened should render self with results 1`] = `
<div
  className="searchResultsIsOpen"
>
  <InfiniteScroll
    className="infiniteScroll"
    isFetching={false}
    loadMore={[Function]}
    pageToken=""
  >
    <ul
      className="results"
    >
      <Video
        handleClick={[Function]}
        publishedAt="a year ago"
        thumbnail="https://i.ytimg.com/hqdefault.jpg"
        title="Professional Advice from Adobe MAX Conference"
        viewCount="5,463"
      />
      <Video
        handleClick={[Function]}
        publishedAt="7 months ago"
        thumbnail="https://i.ytimg.com/vi/Flze-rwT7lM/hqdefault.jpg"
        title="If You Want to Survive in Design, You Better Learn to Code"
        viewCount="39,430"
      />
    </ul>
  </InfiniteScroll>
</div>
`;
